--- a/public/components/templates/profilePage.html
+++ b/public/components/templates/profilePage.html
@@ -36,7 +36,8 @@
       </md-content>
     </md-sidenav>
 
-    <md-content flex layout-padding>
+    <!-- removed "flex" from attributes to get rid of the gray box -->
+    <md-content layout-padding>
       <div layout="column" layout-align="top center">
         <div>
           <md-button ng-click="toggleLeft()" class="md-raised md-primary">
