--- a/public/components/chat/messageForm/messageForm.html
+++ b/public/components/chat/messageForm/messageForm.html
@@ -1,5 +1,5 @@
 <div class="message-form">
-  <form ng-submit="$ctrl.sendMessage($ctrl.message)" submit-form-on-return>
-    <textarea ng-model="$ctrl.message" placeholder="Press enter to send message" autofocus/>
+  <form novalidate ng-submit="$ctrl.submit($ctrl.message)">
+    <input type="text" ng-model="$ctrl.message" placeholder="Press enter to send message" autofocus/>
   </form>
 </div>
