--- a/public/components/chat/state/chat.html
+++ b/public/components/chat/state/chat.html
@@ -1,16 +1,16 @@
-<div class="chat" layout="column" ng-cloak>
-
+<div class="chat" layout="row" ng-cloak>
+<!--
   <md-content flex layout-padding>
     <div layout="column" layout-align="top center">
       <div>
-        <md-button ng-click="toggleLeft()" class="md-raised md-primary">
+        <md-button ng-click="$ctrl.toggleLeft()" class="md-raised md-primary">
           Show Chat
         </md-button>
       </div>
     </div>
-  </md-content>
+  </md-content>-->
 
-  <section layout="row" flex>
+  <!--<section layout="row" flex>
 
     <md-sidenav class="md-sidenav-left" md-component-id="left"
                 md-disable-backdrop md-whiteframe="4">
@@ -24,30 +24,27 @@
         <md-list>
           <md-list-item class="md-3-line">
             <div class="md-list-item-text profileText">
-              <md-button ng-click="toggleLeft()" class="md-accent">
-          Hide Chat
-        </md-button>
-              <!--<h1>{{nickname}}</h1>
-              <h3><img class="photoSize" ng-src="{{picture}}" alt="profilePhoto" /></h3>
-              <br>
-              <h3>Email: {{email}}</h3>
-              <h3>Email Verified: {{emailVerified}}</h3>
-              <h3>Created At: {{createdAt | date}}</h3>
-              <h3>Reputation: {{reputation}}</h3>-->
+              <md-button ng-click="$ctrl.toggleLeft()" class="md-accent">
+                Hide Chat
+              </md-button>
               <h3>users online:</h3>
-              <div ng-repeat="user in ctrl.users track by $index" user="user" ng-click="ctrl.clickUser(user)">{{user}}</div>
-
+              <participant-list participants="$ctrl.participants"></participant-list>
             </div>
             <md-divider ng-if="!$last"></md-divider>
           </md-list-item>
-        </md-list>
+        </md-list>-->
+      
+      <!--</md-content>
+    </md-sidenav>-->
+
+  <!--</section>-->
   
-        
-      </md-content>
-    </md-sidenav>
+  <div flex="30">
+    <participant-list participants="$ctrl.participants"></participant-list>
+  </div>
+  <div flex="70">
+    <message-list messages="$ctrl.messages"></message-list>
+    <message-form on-submit="$ctrl.postMessage"></message-form>
+  </div>
 
-  </section>
-
-
-  <message-list/>
 </div>
