--- a/public/components/chat/messageForm/messageForm.html
+++ b/public/components/chat/messageForm/messageForm.html
@@ -1,5 +1,7 @@
 <div class="message-form">
   <form novalidate ng-submit="$ctrl.submit($ctrl.message)">
-    <input type="text" ng-model="$ctrl.message" placeholder="Press enter to send message" autofocus/>
+    <md-input-container flex-offset="10" flex="80" class="message">
+      <input type="text" ng-model="$ctrl.message" placeholder="Send" autofocus/>
+    <md-input-container>
   </form>
 </div>
