--- a/public/components/templates/profile.html
+++ b/public/components/templates/profile.html
@@ -29,4 +29,6 @@
 <md-button ng-click="ctrl.addField('Node.js')" class="md-raised md-primary">Node.js</md-button>
 <md-button ng-click="ctrl.addField('SQL')" class="md-raised md-primary">SQL</md-button>
 <md-button ng-click="ctrl.addField('noSQL')" class="md-raised md-primary">noSQL</md-button>
+<md-button ng-click="ctrl.addField('General')" class="md-raised md-primary">General</md-button>
+
 
