--- a/public/components/templates/questionAnsweredEntry.html
+++ b/public/components/templates/questionAnsweredEntry.html
@@ -4,39 +4,34 @@
     <h3 class="titlePadding">{{ctrl.questionAndAnswers.question[0].title}}</h3>
     <hr>
     <div class="textPadding">{{ctrl.questionAndAnswers.question[0].text}}</div>
-
     <div class="floatRight">
       <div>Status: {{ctrl.questionAndAnswers.question[0].status}}</div>
       <div>Asked By: {{ctrl.questionAndAnswers.question[0].name}}</div>
-      <div><img class="smallPhotoSize" ng-src="{{ctrl.questionAndAnswers.question[0].image}}"></img></div>
+      <div><img class="smallPhotoSize" ng-src="{{ctrl.questionAndAnswers.question[0].image}}"></img>
+      </div>
       <div>Reputation: {{ctrl.questionAndAnswers.question[0].reputation}}</div>
     </div>
   </div>
-
-
   <div class="Answers">
     <h3>{{ctrl.questionAndAnswers.answer.length}} Answer(s)</h3>
     <div class="answerEntry" ng-repeat="answer in ctrl.questionAndAnswers.answer | orderBy: 'id'">
-    <hr>
-    <div class="textPadding">{{answer.text}}</div>
+      <hr>
+      <div class="textPadding">{{answer.text}}</div>
       <div class="floatRight">
         <div>Answered By: {{answer.name}}</div>
-        <div><img class="smallPhotoSize" ng-src="{{answer.image}}"></img></div>
+        <div><img class="smallPhotoSize" ng-src="{{answer.image}}"></img>
+        </div>
         <div>Reputation: {{answer.reputation}}</div>
-        <button class="btn btn-success" 
-                ng-if="ctrl.notClicked"
-                ng-click="ctrl.addRep(answer.userId)"
-                ui-sref="questionAnsweredEntry({ id: ctrl.questionId })">Add Rep</button>
+        <button class="btn btn-success" ng-if="ctrl.notClicked" ng-click="ctrl.addRep(answer.userId)" ui-sref="questionAnsweredEntry({ id: ctrl.questionId })">Add Rep</button>
         <div ng-show="ctrl.repAdded">You gave {{answer.name}} reputation</div>
       </div>
     </div>
-
-
-  <div class="form-group paddingForm">
-    <label for="answer"><h3>Comment:</h3></label>
-    <textarea class="form-control" rows="10" id="answer" ng-model="ctrl.answerBody"></textarea>
+    <div class="form-group paddingForm">
+      <label for="answer">
+        <h3>Comment:</h3></label>
+      <textarea class="form-control" rows="10" id="answer" ng-model="ctrl.answerBody"></textarea>
+    </div>
+    <button class="btn btn-primary" ui-sref="questionsAnsweredList">Back</button>
+    <button class="btn btn-success" ng-click="ctrl.postAnswer()" ui-sref="questionsAnsweredList">Submit Comment</button>
+    <button class="btn btn-danger" ng-click="ctrl.closeQuestion()" ui-sref="questionsAnsweredList">Close Question</button>
   </div>
-  <button class="btn btn-primary" ui-sref="questionsAnsweredList">Back</button>
-  <button class="btn btn-success"  ng-click="ctrl.postAnswer()" ui-sref="questionsAnsweredList">Submit Comment</button>
-  <button class="btn btn-danger" ng-click="ctrl.closeQuestion()" ui-sref="questionsAnsweredList">Close Question</button>
-</div>
