(BUGFIX) Fixes disconnect/connect sockets splice bug

--- a/public/components/chat/messageList/messageList.html
+++ b/public/components/chat/messageList/messageList.html
@@ -1,8 +1,8 @@
 <md-content> 
 
   <md-toolbar layout="row" class="md-hue-3">
-    <div class="md-toolbar-tools">
-      <span>Chat Interface</span>
+    <div class="md-toolbar-tools chat-toolbar">
+      <span>Chat in Room: {{$ctrl.room}}</span>
     </div>
   </md-toolbar>
 
