(EDIT) Do I really need SE authentication?

--- a/public/components/templates/toolbar.html
+++ b/public/components/templates/toolbar.html
@@ -6,7 +6,8 @@
       <span flex></span>
       <md-button
         aria-label="Login"
-        ng-click="toolbarCtrl.login(); toolbarCtrl.stackAuth()"
+        ng-click="toolbarCtrl.login()"
+        ng-click="toolbarCtrl.stackAuth()"
         ng-if="!toolbarCtrl.auth.isAuthenticated">
         Login
       </md-button>
