--- a/public/components/chat/messageList/messageList.html
+++ b/public/components/chat/messageList/messageList.html
@@ -2,7 +2,7 @@
 
   <md-toolbar layout="row" class="md-hue-3">
     <div class="md-toolbar-tools chat-toolbar">
-      <span>Chat in Room: {{$ctrl.room}}</span>
+      <span>Chatroom: {{$ctrl.room}}</span>
     </div>
   </md-toolbar>
 
