--- a/public/styles.css
+++ b/public/styles.css
@@ -140,3 +140,16 @@ p.lobby {
 md-input-container.message {
   width: 80%;
 }
+
+span.chat-header {
+  font-size: 26px;
+  font-weight: bold;
+  color: white;
+}
+
+span.timestamp {
+  font-size: 12px;
+  color: darkslategrey;
+  font-style: italic;
+  float: right;
+}
