(ADD) Adds query info from SE api

--- a/public/components/templates/questionAnsweredEntry.html
+++ b/public/components/templates/questionAnsweredEntry.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="Answers" ng-repeat="stackAnswer in ctrl.stackAnswers">
-    STACK ANSWER {{stackAnswer}}
+    {{stackAnswer.title}}
     <br>
   </div>
 
