Friday Pull Request (#3)
* (EDIT) Correctly configures files for initial use

* Test change

* (EDIT) remove annoying gray box around "show profile" button

* (EDIT) switch db

* (ADD) Adds authentication function to stack.config

* (ADD) Adds General field for profile and questions

* (EDIT) Saving progress

* (EDIT) Do I really need SE authentication?

* (ADD) render stackService dummy data

* (EDIT) save work, little progress

* (ADD) White lists stackexchange domains

* (ADD) Adds query info from SE api

* (EDIT) improve query to SE api

* (ADD) parses question into tags

* (EDIT) fix the problem of user questions not persisting in db

* (EDIT) successful render of SE results, but needs improvement

* (EDIT) Show or hide stack vs slack view

* (EDIT) Adds padding to stack answers

* (ADD) Add tags info to stack answers page

* (ADD) Add Stack Overflow pic next to each entry

* (EDIT) fix merge conflict

--- a/public/components/templates/postQuestion.html
+++ b/public/components/templates/postQuestion.html
@@ -21,6 +21,8 @@
 <md-button ng-click="fieldId=7" class="md-raised md-primary">Node.js</md-button>
 <md-button ng-click="fieldId=8" class="md-raised md-primary">SQL</md-button>
 <md-button ng-click="fieldId=9" class="md-raised md-primary">noSQL</md-button>
+<md-button ng-click="fieldId=10" class="md-raised md-primary">Other</md-button>
+
 <br><hr><br>
   <md-button class="md-raised" ui-sref="questionsAnsweredList">Back</md-button>
 
