--- a/public/components/templates/profile.html
+++ b/public/components/templates/profile.html
@@ -4,9 +4,8 @@
       <md-card-title-media>
         <div class="md-media-lg card-media" layout-padding>
           <img ng-src="{{ctrl.profile.picture}}" alt="profile-picture">
-
         </div>
-        <md-card-actions layout="column"  layout-align="end center">
+        <md-card-actions layout="column" layout-align="end center">
           <md-button ng-click="ctrl.getFields()">Fields</md-button>
         </md-card-actions>
       </md-card-title-media>
@@ -16,10 +15,8 @@
         <div ng-repeat="field in ctrl.fields track by $index" field="field" ng-click="ctrl.removeField(field)">{{field}}</div>
       </md-card-title-text>
     </md-card-title>
-   
   </md-card>
 </md-content>
-
 <md-button ng-click="ctrl.addField('JavaScript')" class="md-raised md-primary">Javascript</md-button>
 <md-button ng-click="ctrl.addField('Backbone')" class="md-raised md-primary">Backbone</md-button>
 <md-button ng-click="ctrl.addField('CSS')" class="md-raised md-primary">CSS</md-button>
@@ -29,4 +26,4 @@
 <md-button ng-click="ctrl.addField('Node.js')" class="md-raised md-primary">Node.js</md-button>
 <md-button ng-click="ctrl.addField('SQL')" class="md-raised md-primary">SQL</md-button>
 <md-button ng-click="ctrl.addField('noSQL')" class="md-raised md-primary">noSQL</md-button>
-
+<md-button ng-click="ctrl.addField('Other')" class="md-raised md-primary">Other</md-button>
