fixed nate and adewale's code (#4)
* (ADD) Adds scaffolds for chat page

* (ADD) Redoes the sockets/chat page. Still need to make channels and persist data

* Centers the input component

* (ADD) Adds basic room functionality

* (BUGFIX) Fixes current user bug

* (BUGFIX) Fixes disconnect/connect sockets splice bug

* (BUGFIX) Sockets now connect and disconnect in and orderly way, with updates propogating to all clients

* (ADD) Full socket functionality

* (ADD) Adds some css to make chat look nicer

* (MERGE) Fixes merge conflicts

--- a/public/styles.css
+++ b/public/styles.css
@@ -122,7 +122,7 @@ table.table.tableEntry td {
 }
 
 .chat {
-  <<<<<<< HEAD width: 80%;
+  width: 80%;
   margin: auto;
   padding-top: 30px;
 }
@@ -140,6 +140,7 @@ md-input-container.message {
   width: 80%;
 }
 
+
 span.chat-header {
   font-size: 26px;
   font-weight: bold;
@@ -153,11 +154,11 @@ span.timestamp {
   float: right;
 }
 
-chat {
+/*chat {
   width: 400px;
   margin-left: 350px;
   padding-top: 20px;
-}
+}*/
 
 .stackAnswerEntry {
   margin-top: 10px;
@@ -176,3 +177,4 @@ chat {
 .results {
   margin: 10px;
 }
+
